<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/nav_home_selector"
            android:title="@string/nav_jobs"/>

    <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/nav_message"
            android:title="@string/nav_message"/>

    <item
            android:id="@+id/navigation_worker"
            android:icon="@drawable/nav_worker_selector"
            android:title="@string/nav_workers"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/nav_profile"/>

    <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/nav_setting"/>

</menu>
